fix surefire argLine setting